kubernetes/ibm_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customercareregistry

spec:
  replicas: 3
  selector:
    matchLabels:
      app: customercareregistry
  template:
    metadata:
      labels:
        app: customercareregistry

    spec:
      containers:
        - name: customercareregistry-container
          image: uk.icr.io/ibmprojectccr/ccrapp
          ports:
            - containerPort: 5000
              protocol: TCP
