kubernetes/flask_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-services
spec:
  type: ClusterIP
  ports:
    - port: 5000
  selector:
    app: customercareregistry
